--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "format:check": "prettier --check .",
     "type-check": "tsc --noEmit",
     "preview": "vite preview",
-    "prepare": "husky"
+    "prepare": "husky",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -21,6 +23,9 @@
     "zustand": "^4.4.1"
   },
   "devDependencies": {
+    "@storybook/addon-docs": "^9.0.17",
+    "@storybook/addon-onboarding": "^9.0.17",
+    "@storybook/react-vite": "^9.0.17",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
@@ -36,12 +41,14 @@
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "eslint-plugin-storybook": "^9.0.17",
     "husky": "^9.1.7",
     "postcss": "^8.4.27",
     "prettier": "^3.6.2",
+    "storybook": "^9.0.17",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.0.2",
-    "vite": "^4.4.5",
+    "vite": "^5.4.19",
     "vite-plugin-pwa": "^0.16.4"
   }
 }
